fix: address review and static-analysis findings on the platform backup
Reviewer: clickhouseContainerBackupPath was dead configuration. BACKUP ... TO
File('<name>') resolves a bare relative name against the server's configured
allowed_path, so the statement never names a directory and the property was never
read. Removed rather than wired up, since qualifying the path would be wrong.

Sonar (security, new code): the staging archive is now created with owner-only
permissions applied at creation. It holds full database dumps plus
pg_dumpall --roles-only output, which carries role password hashes, so it is not
ordinary scratch data. The JDK default already happens to be 0600 here, but
stating it makes the guarantee explicit rather than umask-dependent.

Sonar (reliability, new code): the stderr drainer is a platform thread again. It
holds a monitor on every read, and a virtual thread blocking inside a
synchronized block can pin its carrier — the opposite of the point. One
short-lived thread per external command, so six per nightly backup.